2002-07-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* aclocal.m4: Regenerate.
	
	* config.hh.in:
	* config.make.in:
	* stepmake/aclocal.m4: Cleanups and more conventional naming for
	datadir ($prefix/share), package_datadir ($prefix/$package), and
	local_package_datadir ($prefix/$package/$version).
	
	* make/lilypond-vars.make:
	* scripts/ly2dvi.py:
	* scripts/lilypond-book.py:
	* scripts/mup2ly.py:
	* scripts/midi2ly.py: use local_package_datadir iso datadir.
	
	* GNUmakefile.in: build_datadir without version.
	
	* lily/main.cc: Datadir cleanup.

	* lily/text-item.cc (lookup_text): 
	* lily/music-output-def.cc (print_smob): 
	* lily/mensural-ligature.cc (brew_molecule):
	* lily/beam-quanting.cc (score_slopes_dy, score_forbidden_quants):
	Fix warnings.
	
2002-07-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/J.S.Bach/baerenreiter-sarabande.ly: Warn when not
	using 6 systems, like the original.

	* input/test/count-systems.ly: New file.

	* lily/spanner.cc (get_broken_into):
	* lily/grob.cc (original_scm, line_scm): New function.

	* lily/include/grob.hh (ly_scm2grob_array): Moved from
	group-interface.hh and renamed.
	(ly_grob_array2scm): New function.

2002-07-23  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/ambitus-engraver.cc: bugfix: create ambitus grob during
	process_music phase

2002-07-23  Han-Wen  <hanwen@cs.uu.nl>

	* lily/separation-item.cc (width): cache extent in extent-X

	* lily/spacing-spanner.cc (standard_breakable_column_spacing):
	only add extent for non-musical column.

	* lily/accidental-placement.cc (split_accidentals): new function
	(get_relevant_accidental_extent): new function

	* lily/staff-spacing.cc (next_note_correction): idem

	* lily/separating-group-spanner.cc (find_rods): use conditional_width().

	* scm/sketch.scm: fix roundfilledbox definition

	* lily/lily-guile.cc (robust_list_ref): be sensible with negative
	argument. This fixes too-long stems on half and quarter notes.
